Fix table overflow bug

--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,6 @@ body {
   );
   width: 100%;
   padding: 2rem;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -161,11 +160,16 @@ p.disclaimer {
 table.links {
   margin: 50px 0;
   width: 90%;
-  max-width: 800px;
+  max-width: 1400px;
+  table-layout: fixed;
 }
 
 table.links td:nth-child(1),
 table.links td:nth-child(2) {
   font-family: monospace;
+  word-wrap: break-word;
 }
 
+table.links td:nth-child(3) {
+  text-align: right;
+}
